@@ -1,16 +1,2 @@
 //------------------Updated needed for this function to be possible
  
-
-
-
-
-var parseinput = function () {
-    //guide var to hold the starting string
-    this.string_to_parse = "";
-    //guide var to hold the Parsed Guide name.
-    this.guidename = "";
-    //guide var to hold Parsed Guide Version.
-    this.guideVer = "";
-    //guide Var to hold Parsed Guide Code.
-    this.guidecode = "";
-}
